# libcontrac

./: .gitignore  AUTHORS  COPYING  INSTALL  Makefile.am  NEWS  README  README.md  configure.ac  doxyfile.in  libcontrac-0.pc.in
include/contrac/: contrac.h  contrac_private.h  dtk.h  dtk_list.h  log.h  match.h  rpi.h  rpi_list.h  utils.h
src/: Makefile.am  contrac.c  dtk.c  dtk_list.c  log.c  main.dox  match.c  rpi.c  rpi_list.c  utils.c
tests/: Makefile.am  test_contrac.c
